Add Player.fbx to gitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ Assets/Characters/Player/player.fbx
 .idea/.idea.Hackathon2022/.idea/indexLayout.xml
 .idea/.idea.Hackathon2022.dir/.idea/vcs.xml
 .idea/.idea.Hackathon2022.dir/.idea/indexLayout.xml
+Assets/Scene based assets/Characters/Player/player.fbx
+Assets/Scene based assets/Characters/Player/player.fbx.meta
